force-app/main/default/objects/FieloPLT__PageSettings__c/FieloPLT__PageSettings__c.object-meta.xml
<CustomObject>
    <description>Page Settings enables extending and customizing Fielo pages functionality.</description>
    <label>Page Settings</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>