force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Actions__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Actions__c</fullName>
    <description>Actions for a specific record within a to &quot;Related List&quot; Page Setting type.</description>
    <inlineHelpText>Enter an Action for a &quot;Related List&quot; Page Setting type.</inlineHelpText>
    <label>Actions</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>