force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Buttons__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Buttons__c</fullName>
    <description>Buttons lets you add custom Buttons Page Setting Types Landing, View and Related.</description>
    <inlineHelpText>Add your own custom Buttons Page Setting Types Landing, View and Related.</inlineHelpText>
    <label>Buttons</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>