force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__DataFilters__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DataFilters__c</fullName>
    <description>JSON string which lets you customly filter a &quot;Related List&quot; Page Setting.</description>
    <inlineHelpText>Enter a JSON string to filter this Related Page Setting to a particular data class.</inlineHelpText>
    <label>Data Filters</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>