force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Fieldset__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Fieldset__c</fullName>
    <description>JSON string that lets you add Fieldsets to Landing, View and Related List Page Setting types.</description>
    <inlineHelpText>Enter the JSON stringto add Fieldsets to Landing, View and Related List Page Setting types.</inlineHelpText>
    <label>Fieldset</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>