force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Filters__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Filters__c</fullName>
    <description>JSON string which allows filtering by to group fields in Reward&gt;Lookup Page Setting Type.</description>
    <inlineHelpText>Enter the JSON string which allows filtering by to group fields in Reward&gt;Lookup Page Setting Type.</inlineHelpText>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>