force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Icon__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Icon__c</fullName>
    <description>Iconic representation of the Page Setting for &quot;Related List&quot; &quot;View&quot; and &quot;Landing&quot; Page Setting types. It follows the Lightning Design System (Category + Name) format.</description>
    <inlineHelpText>Enter Icon JSON code for &quot;Related List&quot; &quot;View&quot; and &quot;Landing&quot; Page Setting types (Category + Name).</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>