force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, the current Page Setting is enabled.</description>
    <inlineHelpText>If ticked, this Page Setting is enabled.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>