force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__IsCustom__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsCustom__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When ticked, it means that the Page Setting was customly created in the Local Development Library and does not come within any of the default Libraries (FieloPLT, FieloELR, FieloPRP).</description>
    <inlineHelpText>When ticked, it means that the Page Setting was customly created in the Local Development Library and does not come within any of the default Libraries (FieloPLT, FieloELR, FieloPRP).</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>