force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Label__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Label__c</fullName>
    <description>It lets you overwrite the default Related label name. Default Label is defined in the Object.</description>
    <inlineHelpText>Enter the label to overwrite the default Related label name</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>