force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Library__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Library which the Page Setting belongs to.</description>
    <inlineHelpText>Choose the Library you want the Page Setting to be part of.</inlineHelpText>
    <label>Library</label>
    <referenceTo>FieloPLT__Library__c</referenceTo>
    <relationshipLabel>Pages Settings</relationshipLabel>
    <relationshipName>Pages_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>