force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Object__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Object__c</fullName>
    <description>API Name (Prefix__Object__c) of the Object you&apos;re applying this Page Setting to.</description>
    <inlineHelpText>Enter the API Name (Prefix__Object__c) of the Object you&apos;re applying this Page Setting to.</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>