force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Order__c</fullName>
    <description>It allows ordering or concatenate different Page Settings, which must be of the same Type and belong to the same Object.</description>
    <inlineHelpText>Enter the number you want this Page Setting to appear.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>