force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__OrderBy__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__OrderBy__c</fullName>
    <description>JSON file which allows ordering records in a &quot;Related List&quot; Page Setting type.</description>
    <inlineHelpText>Enter the record order JSON code for &quot;Related List&quot; Page Setting type.</inlineHelpText>
    <label>Order by</label>
    <length>80</length>
    <type>Text</type>
</CustomField>