force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program which the Page Setting belongs to.</description>
    <inlineHelpText>Choose the Program you want this Page Setting to be part of.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Pages Settings</relationshipLabel>
    <relationshipName>Pages_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>