force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__RecordType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RecordType__c</fullName>
    <description>API name of  &quot;Object&quot; which allows filtering different record types.</description>
    <inlineHelpText>Enter the API name of  &quot;Object&quot; which allows filtering different record types.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>