force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Sections__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Sections__c</fullName>
    <description>JSON string which allows adding &quot;Sections&quot; to group fields (e.g. Information) in New, Edit and Detail Page Setting Types.</description>
    <inlineHelpText>Enter JSON string to add Sections to group fields in New, Edit and Detail Page Setting Types.</inlineHelpText>
    <label>Sections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>