force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__StandardActions__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StandardActions__c</fullName>
    <description>Buttons, Tools or Actions which can be added to Page Settings.</description>
    <inlineHelpText>Choose the Standard Actions to include in the Page Setting.</inlineHelpText>
    <label>Standard Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Clone</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Settings</fullName>
                <label>Page Settings Management</label>
            </value>
            <value>
                <fullName>Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>