force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__StandardRelated__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StandardRelated__c</fullName>
    <label>Related Standard</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ObjectHistory</fullName>
                <label>Object History</label>
            </value>
            <value>
                <fullName>ProcessSteps</fullName>
                <label>Approval History</label>
            </value>
            <value>
                <fullName>CombinedAttachments</fullName>
                <label>Notes &amp; Attachments</label>
            </value>
            <value>
                <fullName>ActivityHistories</fullName>
                <label>Activity History</label>
            </value>
            <value>
                <fullName>OpenActivities</fullName>
                <label>Open Activities</label>
            </value>
            <value>
                <fullName>AttachedContentDocuments</fullName>
                <label>Files</label>
            </value>
            <value>
                <fullName>RelatedContentDistributionList</fullName>
                <label>Content Deliveries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>