force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__TargetField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetField__c</fullName>
    <description>API Name of a Lookup Field from Target Object field.</description>
    <inlineHelpText>Enter the API Name of a Lookup Field from the Target Object you&apos;ve chosen.</inlineHelpText>
    <label>Target Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>