force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__TargetObject__c</fullName>
    <description>API name of the Object from &quot;Target Object&quot;.</description>
    <inlineHelpText>Enter the API name of the Object you want the &quot;Target Object&quot; to be.</inlineHelpText>
    <label>Target Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>