force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Tools__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Tools__c</fullName>
    <description>Tools lets you add a Dropdown menu to Page Settings Type Landing, View, and Related.</description>
    <inlineHelpText>Add a Dropdown menu to Page Settings Type Landing, View, and Related.</inlineHelpText>
    <label>Tools</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>