force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>It includes all the possible Page Settings types available to create: Landing, New,  View, Detail, Related and Edit.</description>
    <inlineHelpText>Choose the type of Page Setting you want to create. Type is directly linked to where you&apos;re applying the Page Setting.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Landing</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Related - New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>