force-app/main/default/objects/FieloPLT__PageSettings__c/fields/FieloPLT__Visibility__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Visibility__c</fullName>
    <description>It lets you render a specific Page Setting based on a condition.</description>
    <inlineHelpText>Enter Visibility JSON code to render the Page Setting based on a condition.</inlineHelpText>
    <label>Visibility</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>