force-app/main/default/objects/FieloPLT__PageSettings__c/listViews/FieloPLT__Fielo_PLT.listView-meta.xml
<ListView>
    <fullName>FieloPLT__Fielo_PLT</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Library__c</columns>
    <columns>FieloPLT__ExternalId__c</columns>
    <columns>FieloPLT__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloPLT__Library__c</field>
        <operation>equals</operation>
        <value>FieloPLT</value>
    </filters>
    <label>Fielo PLT</label>
    <language>en_US</language>
</ListView>